--- a/shalini.html
+++ b/shalini.html
@@ -3,9 +3,269 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Freelance Team Landing Page</title>
+    <style>
+        :root {
+            --primary: #5f72bd;
+            --secondary: #9fd6ff;
+            --accent: #00c6fb;
+            --bg: #f6fafd;
+            --card-bg: #fff;
+            --text: #222;
+            --shadow: 0 4px 24px rgba(95,114,189,0.10);
+        }
+        body {
+            font-family: 'Segoe UI', Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background: linear-gradient(135deg, var(--bg) 60%, var(--secondary) 100%);
+            color: var(--text);
+            min-height: 100vh;
+        }
+        header {
+            background: linear-gradient(90deg, var(--primary) 60%, var(--accent) 100%);
+            color: #fff;
+            padding: 60px 0 40px 0;
+            text-align: center;
+            box-shadow: 0 2px 16px rgba(0,198,251,0.08);
+            border-radius: 0 0 40px 40px;
+        }
+        header h1 {
+            margin: 0;
+            font-size: 3rem;
+            letter-spacing: 2px;
+            font-weight: 700;
+            text-shadow: 0 2px 8px rgba(0,0,0,0.08);
+        }
+        header p {
+            margin: 18px 0 0 0;
+            font-size: 1.3rem;
+            font-weight: 400;
+            opacity: 0.95;
+        }
+        .team-section {
+            max-width: 1100px;
+            margin: 50px auto 0 auto;
+            padding: 0 20px;
+        }
+        .team-section h2 {
+            text-align: center;
+            font-size: 2rem;
+            color: var(--primary);
+            margin-bottom: 30px;
+            letter-spacing: 1px;
+        }
+        .team-list {
+            display: flex;
+            flex-wrap: wrap;
+            gap: 36px;
+            justify-content: center;
+        }
+        .member {
+            background: var(--card-bg);
+            border-radius: 18px;
+            box-shadow: var(--shadow);
+            padding: 32px 22px 24px 22px;
+            width: 250px;
+            text-align: center;
+            transition: transform 0.18s, box-shadow 0.18s;
+            position: relative;
+            overflow: hidden;
+        }
+        .member:hover {
+            transform: translateY(-8px) scale(1.03);
+            box-shadow: 0 8px 32px rgba(0,198,251,0.13);
+        }
+        .member img {
+            width: 90px;
+            height: 90px;
+            border-radius: 50%;
+            object-fit: cover;
+            margin-bottom: 16px;
+            border: 4px solid var(--secondary);
+            box-shadow: 0 2px 12px rgba(0,198,251,0.09);
+        }
+        .member h3 {
+            margin: 10px 0 4px 0;
+            font-size: 1.18rem;
+            color: var(--primary);
+            font-weight: 600;
+        }
+        .member p {
+            margin: 0;
+            font-size: 1rem;
+            color: #555;
+        }
+        .member .socials {
+            margin-top: 14px;
+        }
+        .member .socials a {
+            display: inline-block;
+            margin: 0 6px;
+            color: var(--accent);
+            font-size: 1.2rem;
+            transition: color 0.18s;
+            text-decoration: none;
+        }
+        .member .socials a:hover {
+            color: var(--primary);
+        }
+        .services {
+            background: linear-gradient(90deg, #e3f0ff 60%, #f6fafd 100%);
+            padding: 40px 0 30px 0;
+            margin-top: 60px;
+            border-radius: 40px;
+            box-shadow: 0 2px 16px rgba(95,114,189,0.06);
+        }
+        .services h2 {
+            text-align: center;
+            margin-bottom: 24px;
+            color: var(--primary);
+            font-size: 2rem;
+        }
+        .services-list {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: center;
+            gap: 32px;
+        }
+        .service {
+            background: var(--card-bg);
+            border-radius: 14px;
+            padding: 24px 30px;
+            min-width: 200px;
+            box-shadow: var(--shadow);
+            text-align: center;
+            transition: transform 0.18s, box-shadow 0.18s;
+            border-left: 5px solid var(--accent);
+        }
+        .service:hover {
+            transform: translateY(-6px) scale(1.04);
+            box-shadow: 0 8px 32px rgba(95,114,189,0.13);
+            border-left: 5px solid var(--primary);
+        }
+        .service strong {
+            color: var(--primary);
+            font-size: 1.1rem;
+            letter-spacing: 0.5px;
+        }
+        .service p {
+            color: #444;
+            margin-top: 8px;
+            font-size: 0.98rem;
+        }
+        .contact {
+            text-align: center;
+            margin: 60px 0 40px 0;
+        }
+        .contact h2 {
+            color: var(--primary);
+            font-size: 1.7rem;
+            margin-bottom: 18px;
+        }
+        .contact a {
+            background: linear-gradient(90deg, var(--primary), var(--accent));
+            color: #fff;
+            padding: 14px 36px;
+            border-radius: 8px;
+            text-decoration: none;
+            font-size: 1.15rem;
+            font-weight: 500;
+            box-shadow: 0 2px 12px rgba(0,198,251,0.09);
+            transition: background 0.2s, transform 0.18s;
+            display: inline-block;
+        }
+        .contact a:hover {
+            background: linear-gradient(90deg, var(--accent), var(--primary));
+            transform: scale(1.05);
+        }
+        @media (max-width: 900px) {
+            .team-list, .services-list {
+                flex-direction: column;
+                align-items: center;
+            }
+            .member, .service {
+                width: 90%;
+                min-width: unset;
+            }
+        }
+    </style>
+    <!-- Font Awesome for social icons -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
 </head>
 <body>
-    
+    <header>
+        <h1>Collaboration Freelance Team</h1>
+        <p>Creative minds for your digital success</p>
+    </header>
+
+    <section class="team-section">
+        <h2>Meet Our Team</h2>
+        <div class="team-list">
+            <div class="member">
+                <img src="https://randomuser.me/api/portraits/women/44.jpg" alt="Shalini">
+                <h3>Shalini S</h3>
+                <p>Full Stack Developer</p>
+                <div class="socials">
+                    <a href="#"><i class="fab fa-linkedin"></i></a>
+                    <a href="#"><i class="fab fa-github"></i></a>
+                </div>
+            </div>
+            <div class="member">
+                <img src="https://randomuser.me/api/portraits/men/32.jpg" alt="Alex">
+                <h3>Alex Kumar</h3>
+                <p>UI/UX Designer</p>
+                <div class="socials">
+                    <a href="#"><i class="fab fa-behance"></i></a>
+                    <a href="#"><i class="fab fa-dribbble"></i></a>
+                </div>
+            </div>
+            <div class="member">
+                <img src="https://randomuser.me/api/portraits/women/65.jpg" alt="Priya">
+                <h3>Priya Singh</h3>
+                <p>Content Strategist</p>
+                <div class="socials">
+                    <a href="#"><i class="fab fa-twitter"></i></a>
+                    <a href="#"><i class="fab fa-medium"></i></a>
+                </div>
+            </div>
+            <div class="member">
+                <img src="https://randomuser.me/api/portraits/men/76.jpg" alt="Rahul">
+                <h3>Rahul Mehta</h3>
+                <p>Digital Marketer</p>
+                <div class="socials">
+                    <a href="#"><i class="fab fa-linkedin"></i></a>
+                    <a href="#"><i class="fab fa-instagram"></i></a>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="services">
+        <h2>Our Services</h2>
+        <div class="services-list">
+            <div class="service">
+                <strong><i class="fas fa-code"></i> Web Development</strong>
+                <p>Modern, responsive websites & web apps</p>
+            </div>
+            <div class="service">
+                <strong><i class="fas fa-paint-brush"></i> UI/UX Design</strong>
+                <p>Intuitive and beautiful user experiences</p>
+            </div>
+            <div class="service">
+                <strong><i class="fas fa-pen-nib"></i> Content Creation</strong>
+                <p>SEO-friendly blogs, copywriting & more</p>
+            </div>
+            <div class="service">
+                <strong><i class="fas fa-bullhorn"></i> Digital Marketing</strong>
+                <p>Social media, SEO, and online campaigns</p>
+            </div>
+        </div>
+    </section>
+
+    <div class="contact">
+        <h2>Let's Work Together!</h2>
+        <a href="mailto:yourteam@email.com"><i class="fas fa-envelope"></i> Contact Us</a>
+    </div>
 </body>
 </html>
