--- a/harshini.html
+++ b/harshini.html
@@ -3,9 +3,106 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>VISUALIZATION</title>
+    <title>Freelancing Team | Landing Page</title>
+    <style>
+        body {
+            font-family: 'Segoe UI', Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background: linear-gradient(120deg, #6a11cb 0%, #2575fc 100%);
+            color: #fff;
+        }
+        .container {
+            max-width: 700px;
+            margin: 60px auto;
+            background: rgba(0,0,0,0.5);
+            border-radius: 16px;
+            padding: 40px 30px;
+            box-shadow: 0 8px 32px rgba(0,0,0,0.2);
+            text-align: center;
+        }
+        h1 {
+            font-size: 2.8rem;
+            margin-bottom: 10px;
+        }
+        p {
+            font-size: 1.2rem;
+            margin-bottom: 30px;
+        }
+        .cta-btn {
+            background: #fff;
+            color: #2575fc;
+            padding: 14px 36px;
+            border: none;
+            border-radius: 30px;
+            font-size: 1.1rem;
+            font-weight: bold;
+            cursor: pointer;
+            transition: background 0.2s, color 0.2s;
+            text-decoration: none;
+        }
+        .cta-btn:hover {
+            background: #2575fc;
+            color: #fff;
+        }
+        .team {
+            margin-top: 40px;
+            display: flex;
+            justify-content: center;
+            gap: 30px;
+            flex-wrap: wrap;
+        }
+        .member {
+            background: rgba(255,255,255,0.1);
+            border-radius: 12px;
+            padding: 18px 14px;
+            width: 140px;
+        }
+        .member img {
+            width: 60px;
+            height: 60px;
+            border-radius: 50%;
+            margin-bottom: 10px;
+            border: 2px solid #fff;
+        }
+        .member h3 {
+            margin: 0;
+            font-size: 1.1rem;
+        }
+        .member span {
+            font-size: 0.95rem;
+            color: #e0e0e0;
+        }
+        @media (max-width: 600px) {
+            .container { padding: 20px 8px; }
+            .team { flex-direction: column; align-items: center; }
+        }
+    </style>
 </head>
 <body>
-    
+        <h1>Welcome to Our Freelancing Team</h1>
+        <p>
+            We are a group of passionate freelancers offering top-notch services in web development, design, content writing, and more.<br>
+            Let us help you bring your ideas to life!
+        </p>
+        <a href="mailto:yourteam@email.com" class="cta-btn">Contact Us</a>
+        <div class="team">
+            <div class="member">
+                <img src="https://randomuser.me/api/portraits/men/32.jpg" alt="Team Member">
+                <h3>Harshini</h3>
+                <span>Web Developer</span>
+            </div>
+            <div class="member">
+                <img src="https://randomuser.me/api/portraits/women/44.jpg" alt="Team Member">
+                <h3>Alex</h3>
+                <span>UI/UX Designer</span>
+            </div>
+            <div class="member">
+                <img src="https://randomuser.me/api/portraits/men/65.jpg" alt="Team Member">
+                <h3>Sam</h3>
+                <span>Content Writer</span>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
